--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,11 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+header {
+  background-color: #242424;
+  color: #fff;
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
