--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -2,6 +2,11 @@
     background-color: #242424;
     padding: 10px;
     display: flex;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
     justify-content: space-between;
     align-items: center;
 }
