--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -14,6 +14,7 @@
 .navbar ul {
     list-style-type: none;
     padding: 0;
+
 }
 
 .navbar ul li {
@@ -26,6 +27,10 @@
     color: #f9f9f9;
 }
 
-.navbar img {
-    margin-right: 10px; /* Adjusts space between the image and the h1 tag */
+.navbar-left {
+    position: fixed; /* Added to position it relative to the nearest positioned ancestor */
+    top: 2%;            /* Added to align it to the top */
+    left: 2%;           /* Added to align it to the left */
+    display: flex;
+    align-items: center;
 }
